<resources>
    <string name="app_name">Botic</string>
    <string name="aboutapp">version</string>
    <string name="copyright">Copyright Disbudpar Bojonegoro © 2017</string>
    <string name="title_activity_main_interface">mainInterface</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wisata">Tourism</string>
    <string name="belanja">Shopping</string>
    <string name="hotel">Hotel</string>
    <string name="kuliner">Culinary</string>
    <string name="transportasi">Transportation</string>
    <string name="checkin_turis">Check-in Tourist</string>
    <string name="atur_liburanmu">Atur Liburanmu !</string>
    <string name="pilih_destinasi_mu">Choose destination</string>
    <string name="data_pemesan">Customer data</string>
    <string name="nomor_indentitas">identity number</string>
    <string name="nomor_telepon">phone number</string>
    <string name="deskripsi_kegiatan">activity description</string>
    <string name="jenis_gedung">Building :  </string>
    <string name="tanggal_pesan">order date :</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="waktu_pesan">order time :</string>
    <string name="siang_06_00_15_00_wib">Day ( 06:00 a.m - 03:00 p.m WIB )</string>
    <string name="malam_16_00_22_00_wib">Night ( 04:00 p.m - 10:00 p.m WIB )</string>
    <string name="siang_malam_24_jam">Day - Night ( 24 Hour )</string>
    <string name="selesaikan_pemesanan">Finish Booking</string>
    <string name="batal">Cancel</string>
    <string name="booking">Booking</string>
    <string name="term">I have read all the terms and are responsible for the data I have inputted and can guarantee the truth of the data.</string>
    <string name="jenis_kesenian">type of art :</string>
    <string name="nama_tempat">Place Name</string>
    <string name="lokasi">Location</string>
    <string name="harga_tiket">Ticket Price</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="deskripsi">Description</string>
    <string name="review">Review</string>
    <string name="add_review">add review</string>
    <string name="share">Share</string>
    <string name="email_address">email address</string>
    <string name="textheader">Joining billions of backpackers around the world. Open the gadget you find them in other parts of the world</string>
    <string name="password">password</string>
    <string name="signin">Sign in</string>
    <string name="anda_belum_punya_account">You have no account ?</string>
    <string name="daftar_disini">Register here</string>
    <string name="nama">name</string>
    <string name="confirm_password">confirm password</string>
    <string-array name="array_gedung">
        <item>Serbaguna Building</item>
        <item>Pesanggrahan Tirtawana Building</item>
    </string-array>
    <string-array name="array_identitas">
        <item>KTP</item>
        <item>SIM</item>
        <item>Pasport</item>
    </string-array>
    <string name="facebook_app_id">457961017871793</string>
    <string name="success_login">Login success</string>
    <string name="failure_login">Login Failed, Your email or Password is wrong!</string>
    <string name="title_activity_detail_konten">detail_konten</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"


        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Avoiding elevation interference.\n\n"
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "On a component level, components can move or be removed before they cause interference. "
        "On the layout level, design your app layout to minimize opportunities for interference. "
    </string>
    <string name="termcondition_1">I have read the terms and conditions and are responsible for the data that I have inputted and can guarantee the truth of the data.</string>
    <string name="namaIdentitas">name ( according to identity )</string>
    <string name="addstar">Add rating :</string>
    <string name="logout">Logout</string>
    <string name="aboutapps">About App</string>
    <string name="bookingasset">Assets Booking</string>
    <string name="event">Event</string>
    <string name="aboutbjn">About Bojonegoro</string>
    <string name="leisure">Leisure</string>
    <string name="kesehatan">Health</string>
    <string name="keuangan">Finance</string>
    <string name="tmpibadah">Praying</string>
    <string name="pelpublik">Public services</string>
    <string name="favorite">Favorite</string>
    <string name="beranda">Dashboard</string>
    <string name="fitur">Features</string>
    <string name="jenisidentitas">Identity type :</string>
    <string name="syaratketentuan">Terms and Conditions</string>
    <string name="invoicebookinggdg">Invoce Booking</string>
    <string name="noID">Identity number</string>
    <string name="Nama">Name</string>
    <string name="NomorHP">Phone number</string>
    <string name="jenisgedung">Building</string>
    <string name="tanggalpesan">Order date</string>
    <string name="waktusewa">Order time</string>
    <string name="selesai">Finish</string>
    <string name="asal">From</string>
    <string name="Time">Time</string>
    <string name="datapj">Guide Data</string>
    <string name="headerbooking">The booking assets process is used to perform a comprehensive data collection to create the convenience of transactions from the consumer and the provision.</string>
    <string name="bookinggedung">Assets Booking</string>
    <string name="bookingkesenian">Art Booking</string>
    <string name="datatamuwisata">Tourist Guest Data</string>
    <string name="daftar">Register</string>
    <string name="termsCheckIn">I am responsible for the data I input and can guarantee the truth of the data.</string>
    <string name="daftarcheck">Next</string>
    <string name="bookingberhasil">Successfull Booking</string>
    <string name="bookinggagal">Failed to Booking</string>
    <string name="batal_dContent">Cancel</string>
    <string name="suc_review">Review Successfully Added</string>
    <string name="fail_review">Review Failed Added</string>
    <string name="tujuan_Loc">Destination</string>
    <string name="suc_regis">Successfull Registered</string>
    <string name="fail_regis">Failde Registered</string>
    <string name="conf_pass">Confirm Password doesnt match !</string>
</resources>