<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.amrizalns.botic.activity.detail_content"
    tools:showIn="@layout/activity_detail_content">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/second_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_tempat"
                    android:textColor="@color/colorContent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lokasi"
                    android:textColor="@color/colorContent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/detail_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_tiket"
                    android:textColor="@color/colorContent"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_time_open"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open"
                        android:textColor="@color/colorContent"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" - "
                        android:textColor="@color/colorContent"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/detail_time_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/close"
                        android:textColor="@color/colorContent"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/deskripsi"
                android:textColor="@color/colorContent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorContent">

            </View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:id="@+id/detail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/deskripsi"
                android:textColor="@color/colorContent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/review"
                android:textColor="@color/colorContent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorContent">

            </View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_review"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorGplus"
                android:text="@string/add_review"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textColor="@color/colorBackground" />

            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/colorShare"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textColor="@color/colorBackground" />

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/r_review"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorContent"
                android:scrollbars="vertical" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
