<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amrizalns.botic.activity.booking_gedung"
    android:background="@color/colorBackground"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/banner"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/banner_booking"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sc"
        android:layout_below="@id/banner"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:paddingBottom="30dp"
        >

        <LinearLayout
            android:id="@+id/booking_gedung_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="start"
                android:text = "@string/data_pemesan"
                android:textColor="@color/colorContent"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/field_no_identitas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/nomor_indentitas"
                android:textSize="14sp"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorContent"
                android:textColorHint="@color/colorContent"
                android:backgroundTint="@color/colorContent"
                android:textColor="@color/colorContent"
                android:singleLine="true"
                android:ellipsize="end"
                android:inputType="numberDecimal"
                android:maxLength="16"
                />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/field_number_call"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/nomor_telepon"
                android:textSize="14sp"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorContent"
                android:textColorHint="@color/colorContent"
                android:backgroundTint="@color/colorContent"
                android:textColor="@color/colorContent"
                android:singleLine="true"
                android:ellipsize="end"
                android:inputType="numberDecimal"
                />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/field_desc_gedung"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/deskripsi_kegiatan"
                android:textSize="14sp"
                android:maxLines="10"
                android:textCursorDrawable="@color/colorContent"
                android:textColorHint="@color/colorContent"
                android:backgroundTint="@color/colorContent"
                android:textColor="@color/colorContent"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxLength="1000"
                android:inputType="textMultiLine"
                />
            <LinearLayout
                android:id="@+id/place_gedung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:gravity="start"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_gedung"
                        android:textColor="@color/colorContent"
                        android:textSize="14sp"
                        />
                    <android.support.v7.widget.AppCompatSpinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/jenis_gedung"

                        >

                    </android.support.v7.widget.AppCompatSpinner>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_gedung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:gravity="start"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal_pesan"
                        android:textColor="@color/colorContent"
                        android:textSize="14sp"
                        />
                    <TextView
                        android:id="@+id/txt_date"
                        android:paddingTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/dd_mm_yyyy"
                        android:textColor="@color/colorContent"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"

                    >
                    <ImageButton
                        android:id="@+id/btn_date"
                        android:background="@drawable/btn_set_act"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_menu_event"
                        android:padding="5dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="5dp"
                        android:onClick="datePicker"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_gedung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waktu_pesan"
                    android:textColor="@color/colorContent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    />
                <RadioGroup
                    android:id="@+id/rad_waktu_sewa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    >

                    <RadioButton
                        android:buttonTint="@color/colorContent"
                        android:id="@+id/siang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/siang_06_00_15_00_wib"
                        android:textColor="@color/colorContent"
                        android:textSize="14sp"

                        />

                    <RadioButton
                        android:buttonTint="@color/colorContent"
                        android:id="@+id/malam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malam_16_00_22_00_wib"
                        android:textColor="@color/colorContent"
                        android:textSize="14sp"
                        />

                    <RadioButton
                        android:buttonTint="@color/colorContent"
                        android:id="@+id/siangmalam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/siang_malam_24_jam"
                        android:textColor="@color/colorContent"
                        android:textSize="14sp"

                        />
                </RadioGroup>
            </LinearLayout>
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btn_next_gedung"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/selesaikan_pemesanan"
                android:textColor="@color/colorMenu"
                android:textStyle="bold"
                android:textSize="14sp"
                android:background="@drawable/btn_set_act" />
            </LinearLayout>
    </ScrollView>
</RelativeLayout>
