<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorBackground"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_botic" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_tempat"
                android:textColor="@color/colorContent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                android:textColor="@color/colorContent"
                android:textSize="12sp" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#EEEEEE"
                android:layout_gravity="bottom"
                />
            <TextView
                android:id="@+id/detail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textColor="@color/colorContent"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#EEEEEE"
        android:layout_gravity="bottom"
        />
</android.support.v7.widget.CardView>